[fixbug] Overlaping load elements over the Canvas

--- a/Assets/WebGLTemplates/Fantasmagoria/static/style.css
+++ b/Assets/WebGLTemplates/Fantasmagoria/static/style.css
@@ -168,5 +168,6 @@ body
   to
   {
     opacity: 0;
+    display: none;
   }
 }
